--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,43 @@
 .read-the-docs {
   color: #888;
 }
+
+div {
+  border: 1px solid grey;
+  margin: 5px;
+  padding: 5px;
+}
+
+.kitchen {
+  background-color: rgb(233, 164, 45);
+  display: flex;
+  flex-direction: column;
+}
+
+.sink {
+  background-color: rgb(113, 65, 17);
+  width: 25%;
+}
+
+.oven {
+  background-color: rgb(179, 66, 25);
+  width: 25%;
+}
+
+.bedroom {
+  background-color: rgb(51, 109, 51);
+}
+
+.bath {
+  background-color: rgb(37, 37, 163);
+}
+
+.livingroom {
+  background-color: tan;
+}
+
+.floorplan {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
